--- a/TranspoLink/wwwroot/css/admin.css
+++ b/TranspoLink/wwwroot/css/admin.css
@@ -881,3 +881,11 @@
 .btn-unblock {
     background-color: #2ed573;
 }
+
+.tab {
+    text-decoration: none !important;
+}
+
+    .tab:hover {
+        text-decoration: none;
+    }
