--- a/TranspoLink/Views/Shared/_Layout.cshtml
+++ b/TranspoLink/Views/Shared/_Layout.cshtml
@@ -99,7 +99,7 @@
                 <li><a href="/Admin/Admins">Admins</a></li>
                 <li><a href="/Admin/Members">Members</a></li>
                 <li><a href="/Admin/Routes">Routes</a></li>
-                <li><a href="/Admin/Vehicles">Vehicles</a></li>
+                <li><a href="/Vehicle/Vehicles">Vehicles</a></li>
                 <li><a href="/Admin/Trips">Trips</a></li>
                 <li><a href="/Admin/Bookings">Bookings</a></li>
             }
