--- a/TranspoLink/Views/Account/Login.cshtml
+++ b/TranspoLink/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 
 @section head {
     <link rel="stylesheet" href="/css/login.css" asp-append-version="true" />
-    <script src="/js/regNlog.js" defer></script>
+    <script src="/js/regNlog.js" asp-append-version="true" defer></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 }
 
@@ -19,34 +19,18 @@
         <form method="post" class="auth-form">
             <div asp-validation-summary="ModelOnly" class="validation-summary-errors"></div>
 
-            <div class="auth-option-group">
-                <button type="button" class="auth-option active" data-login-type="email">
-                    <span class="auth-option-icon">✓</span>
-                    <span class="auth-option-icon-empty" style="display:none;"></span>
-                    Email / User ID
-                </button>
-                <button type="button" class="auth-option" data-login-type="phone">
-                    <span class="auth-option-icon" style="display:none;">✓</span>
-                    <span class="auth-option-icon-empty"></span>
-                    Phone
-                </button>
-            </div>
-
-            <div class="auth-input-group" id="email-input-group">
+            <div class="auth-input-group">
                 <span class="auth-input-icon">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="#666"><path d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z" /></svg>
+                    <svg class="icon-email" width="20" height="20" viewBox="0 0 24 24" fill="#666">
+                        <path d="M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z" />
+                    </svg>
+                    <svg class="icon-phone" style="display:none;" width="20" height="20" viewBox="0 0 24 24" fill="#666">
+                        <path d="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z" />
+                    </svg>
                 </span>
-                <input asp-for="Email" type="text" placeholder="Email / User ID" autofocus>
+                <input asp-for="Input" type="text" placeholder="Email / Phone Number" autofocus>
             </div>
-            <span asp-validation-for="Email" class="field-validation-error"></span>
-
-            <div class="auth-input-group" id="phone-input-group" style="display: none;">
-                <span class="auth-input-icon">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="#666"><path d="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z" /></svg>
-                </span>
-                <input asp-for="Phone" type="text" placeholder="Phone Number">
-            </div>
-            <span asp-validation-for="Phone" class="field-validation-error"></span>
+            <span asp-validation-for="Input" class="field-validation-error"></span>
 
             <div class="auth-input-group">
                 <span class="auth-input-icon">
@@ -54,7 +38,7 @@
                 </span>
                 <input asp-for="Password" type="password" placeholder="Password">
                 <button type="button" class="auth-toggle-password">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="#999"><path d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z" /></svg>
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="#999"><path d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z" /></svg>
                 </button>
             </div>
             <span asp-validation-for="Password" class="field-validation-error"></span>
