--- a/TranspoLink/Views/Account/ProfileManage.cshtml
+++ b/TranspoLink/Views/Account/ProfileManage.cshtml
@@ -23,12 +23,32 @@
                 <input asp-for="Photo" type="file" accept="image/jpeg,image/png" hidden disabled>
 
                 <div class="user-header-banner">
+
                     <div class="upload-trigger">
-                        <div class="upload disabled-upload" id="photoContainer" title="Edit Profile to change photo">
-                            <img src="@(string.IsNullOrEmpty(Model.PhotoURL) || Model.PhotoURL == "default_photo.png" ? "/images/default_photo.png" : (Model.PhotoURL.StartsWith("/images/") ? Model.PhotoURL : "/images/" + Model.PhotoURL))"
-                                 class="user-avatar-large"
-                                 id="profileImagePreview"
-                                 onerror="this.src='/images/default_photo.png'">
+
+                        <div class="profile-pic-wrapper">
+                            <div class="upload disabled-upload" id="photoContainer" title="Click to Preview (or Edit)">
+                                @{
+                                    var imgSrc = string.IsNullOrEmpty(Model.PhotoURL) || Model.PhotoURL == "default_photo.png"
+                                    ? "/images/default_photo.png"
+                                    : (Model.PhotoURL.StartsWith("/images/") ? Model.PhotoURL : "/images/" + Model.PhotoURL);
+                                }
+                                <img src="@imgSrc"
+                                     class="user-avatar-large"
+                                     id="profileImagePreview"
+                                     onerror="this.src='/images/default_photo.png'">
+                            </div>
+
+                            @if (Model.PhotoURL != "default_photo.png" && !string.IsNullOrEmpty(Model.PhotoURL))
+                            {
+                                <a href="@imgSrc" download="ProfilePhoto.jpg" class="btn-download-icon" title="Download Photo">
+                                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                                        <polyline points="7 10 12 15 17 10"></polyline>
+                                        <line x1="12" y1="15" x2="12" y2="3"></line>
+                                    </svg>
+                                </a>
+                            }
                         </div>
 
                         <div class="user-info-text">
@@ -103,5 +123,12 @@
 
         </div>
 
+    </div>
+</div>
+
+<div id="imagePreviewModal" class="modal-overlay" style="display:none;" onclick="closePreview()">
+    <div class="preview-box" onclick="event.stopPropagation()">
+        <span class="close-preview" onclick="closePreview()">×</span>
+        <img id="previewImgTarget" src="" alt="Profile Preview">
     </div>
 </div>
