--- a/TranspoLink/Views/Admin/_AdminTable.cshtml
+++ b/TranspoLink/Views/Admin/_AdminTable.cshtml
@@ -58,7 +58,7 @@
                             {
                                 if (a.Id != "A001")
                                 {
-                                    <a href="/Admin/EditAdmin/@a.Id" class="btn-view" style="background-color: #f59e0b;">Edit</a>
+                                    <a href="/Admin/ModifyAdmin/@a.Id" class="btn-view" style="background-color: #f59e0b;">Edit</a>
                                     <button type="button" class="btn-delete"
                                             onclick="openConfirmModal('/Admin/DeleteAdmin/@a.Id', '@a.Name')">
                                         Delete
